Added cases by speciment date UK radio button card and excluded UK from separate equiavelnt cards.

--- a/Layouts/cases.yaml
+++ b/Layouts/cases.yaml
@@ -28,76 +28,167 @@ headlineNumbers:
 
 cards:
 
-# Only shown for UK (identical to non-UK version but needs different abstract)
+##############################################################################################################################
 
-  - heading: Daily cases by date reported
-    cardType: chart
+# Only shown for UK
+
+  - heading: Cases by specimen date, by nation
+    cardType: multiAreaStatic
     locationAware:
-      included:
+      included: 
         areaType:
           - overview
 
     fullWidth: true
     abstract: >
-      Number of individuals who have had at least one lab-confirmed positive COVID-19 test result,
-      by date reported. On 2 July, case data from pillars 1 and 2 of the testing programme were
-      combined and de-duplicated, resulting in a step decrease in the cumulative number of cases
-      reported.
+      Number of people with at least one lab-confirmed positive COVID-19 test result, by specimen date, 
+      by nation.  Individuals tested positive more than once are only counted once, on the date of 
+      their first positive test.
 
     download:
-      - newCasesByPublishDate
-      - cumCasesByPublishDate
+      - newCasesBySpecimenDate
+      - cumCasesBySpecimenDate
+      
+    options:
+      type: radio
+      heading: null
+      choices:
+        - By nation
+        - UK total
+    
+    By nation:
+      
+      tabs:
+        - heading: Daily
+          tabType: chart
+          barType: stack
+          colours: [0, 9, 3, 10] # areaNames in alphabetical order
+          params:
+            - key: areaType
+              sign: "="
+              value: nation
 
-    tabs:
-      - heading: Daily
-        tabType: chart
-        barType: overlay
-        fields:
-          - label: Number of cases
-            value: newCasesByPublishDate
-            tooltip: Daily number of new people with a lab-confirmed positive test result by date reported
-            type: bar
-            colour: 0
+          fields:
+            - label: "Number of cases"
+              value: newCasesBySpecimenDate
+              tooltip: Daily number of new people with a lab-confirmed positive test result, resident in each nation, by specimen date
+              type: bar
+              rollingAverage: false
 
-          - label: Cases (7-day average)
-            value: newCasesByPublishDate
-            tooltip: 7 day rolling average of the daily number of new positive cases reported
-            type: line
-            colour: 3
-            fill: false
-            rollingAverage: true
+        - heading: Cumulative
+          tabType: chart
+          barType: stack
+          colours: [0, 9, 3, 10] # areaNames in alphabetical order
+          params:
+            - key: areaType
+              sign: "="
+              value: nation
 
-      - heading: Cumulative
-        tabType: chart
-        fields:
-          - label: Number of cases
-            value: cumCasesByPublishDate
-            tooltip: Cumulative total number of people with a lab-confirmed positive test result by date reported
-            type: bar
-            colour: 0
-            rollingAverage: false
+          fields:
+            - label: "Number of cases"
+              value: cumCasesBySpecimenDate
+              tooltip: Cumulative total number of people with a lab-confirmed positive test result, resident in each nation, by specimen date
+              type: bar
+              rollingAverage: false
 
-      - heading: Data
-        tabType: table
-        fields:
-          - label: Date reported
-            value: date
-            type: date
-            tooltip: Date reported on coronavirus.data.gov.uk
+        - heading: Data
+          tabType: table
+          params:
+            - key: areaType
+              sign: "="
+              value: nation
+        
+          fields:
+            - label: Specimen date
+              value: date
+              type: date
+              tooltip: Date the sample was taken from the person
 
-          - label: Daily cases
-            value: newCasesByPublishDate
-            type: numeric
-            tooltip: Daily number of new people with a lab-confirmed positive test result by date reported
+            - label: daily
+              value: newCasesBySpecimenDate
+              type: numeric
+              tooltip: Daily number of new people with a lab-confirmed positive test result, resident in each nation, by specimen date
 
-          - label: Cumulative cases
-            value: cumCasesByPublishDate
-            type: numeric
-            tooltip: Cumulative total number of people with a lab-confirmed positive test result by date reported
+            - label: total
+              value: cumCasesBySpecimenDate
+              type: numeric
+              tooltip: Cumulative total number of people with a lab-confirmed positive test result, resident in each nation, by specimen date
 
-      - heading: About 
-        tabType: metadata
-        filename: cardMetadata/cases/cardCasesTimeSeries.md
+        - heading: About 
+          tabType: metadata
+          filename: cardMetadata/cases/cardCasesTimeSeries.md
+
+    UK total:
+      
+      tabs:
+        - heading: Daily
+          tabType: chart
+          barType: stack
+          colours: [0] # areaNames in alphabetical order
+          params:
+            - key: areaType
+              sign: "="
+              value: overview
+
+          fields:
+            - label: "Number of cases"
+              value: newCasesBySpecimenDate
+              tooltip: Daily number of new people with a lab-confirmed positive test result, by specimen date
+              type: bar
+              rollingAverage: false
+
+            - label: Cases (7-day average)
+              value: newCasesBySpecimenDate
+              tooltip: 7 day rolling average of the daily number of cases by specimen date
+              type: line
+              colour: 3
+              fill: false
+              rollingAverage:
+                window: 7
+                clipEnd: 3 #no of days to exclude for incomplete data
+
+        - heading: Cumulative
+          tabType: chart
+          barType: stack
+          colours: [0] # areaNames in alphabetical order
+          params:
+            - key: areaType
+              sign: "="
+              value: overview
+
+          fields:
+            - label: "Number of cases"
+              value: cumCasesBySpecimenDate
+              tooltip: Cumulative total number of people with a lab-confirmed positive test result, by specimen date
+              type: bar
+              rollingAverage: false
+
+        - heading: Data
+          tabType: table
+          params:
+            - key: areaType
+              sign: "="
+              value: overview
+        
+          fields:
+            - label: Specimen date
+              value: date
+              type: date
+              tooltip: Date the sample was taken from the person
+
+            - label: daily
+              value: newCasesBySpecimenDate
+              type: numeric
+              tooltip: Daily number of new people with a lab-confirmed positive test result, by specimen date
+
+            - label: total
+              value: cumCasesBySpecimenDate
+              type: numeric
+              tooltip: Cumulative total number of people with a lab-confirmed positive test result, by specimen date
+
+        - heading: About 
+          tabType: metadata
+          filename: cardMetadata/cases/cardCasesTimeSeries.md
 
 ##############################################################################################################################
 
@@ -141,7 +232,7 @@ cards:
               value: nation
 
           fields:
-            - label: ""
+            - label: "Number of cases"
               value: newCasesByPublishDate
               tooltip: Daily number of new people with a lab-confirmed positive test result, resident in each nation, by date reported
               type: bar
@@ -157,7 +248,7 @@ cards:
               value: nation
 
           fields:
-            - label: ""
+            - label: "Number of cases"
               value: cumCasesByPublishDate
               tooltip: Cumulative total number of people with a lab-confirmed positive test result, resident in each nation, by date reported
               type: bar
@@ -209,6 +300,16 @@ cards:
               type: bar
               rollingAverage: false
 
+            - label: Cases (7-day average)
+              value: newCasesByPublishDate
+              tooltip: 7 day rolling average of the daily number of cases by date reported
+              type: line
+              colour: 3
+              fill: false
+              rollingAverage:
+                window: 7
+                clipEnd: 3 #no of days to exclude for incomplete data
+
         - heading: Cumulative
           tabType: chart
           barType: stack
@@ -219,7 +320,7 @@ cards:
               value: overview
 
           fields:
-            - label: ""
+            - label: "Number of cases"
               value: cumCasesByPublishDate
               tooltip: Cumulative total number of people with a lab-confirmed positive test result, by date reported
               type: bar
@@ -254,8 +355,14 @@ cards:
 
 ##############################################################################################################################
 
+# not shown for UK (has separate radio button card)
+
   - heading: Daily cases by specimen date
     cardType: chart
+    locationAware:
+      excluded:
+        areaType:
+          - overview
 
     fullWidth: true
     abstract: >
@@ -323,7 +430,7 @@ cards:
 
 ##############################################################################################################################
 
-# Not shown for UK (identical to UK version but needs different abstract) or sub-national (no data)
+# Not shown for UK (has separate radio button card) or sub-national (no data)
 
   - heading: Daily cases by date reported
     cardType: chart
