--- a/Layouts/cases.yaml
+++ b/Layouts/cases.yaml
@@ -1225,10 +1225,11 @@ cards:
 
     fullWidth: false
     abstract: >
-      COVID-19 cases (number of people with a lab-confirmed positive test result) in England
-      by Middle Super Output Area (MSOA).  MSOAs are small areas with around 7,200 average
-      population.  The data are updated each weekday, and show the latest 7 days for which
-      complete data are available.
+      COVID-19 cases (number of people with a lab-confirmed positive test result) in 
+      England by Middle Super Output Area (MSOA). MSOAs are small areas with 
+      around 7,200 average population. The data are updated each weekday, and show the 
+      latest 7 days for which near-complete data are available. Counts of 0-2 are shown 
+      as 0-2 in the spreadsheet or -99 in the machines-readable formats.
 
     image: 
       url: https://c19pubdev.azureedge.net/assets/images/msoa-outline.png
